cabal-version:       2.4

name:                aoc23
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Avi Caspe
maintainer:          avi.caspe@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:         base
                       , advent-of-code-api
                       , advent-of-code-ocr
                       , megaparsec
                       , text
                       , lens
                       , generic-lens
                       , split
                       , containers
                       , linear
                       , mtl
                       , finite-typelits
                       , recursion-schemes
                       , free
                       , comonad
                       , groups
                       , semigroupoids
                       , MemoTrie
                       , psqueues
                       , nonempty-containers
                       , array
                       , vector
                       , foldl
                       , data-interval
                       , strict-tuple
                       , parallel

  exposed-modules:     Day01
                       Day02
                       Day03
                       Day04
                       Day05
                       Day06
                       Day07
                       Day08
                       Day09
                       Day10
                       Day11
                       Day12
                       Day13
                       Day14
                       Day15
                       Day16
                       Day17
                       Day18
                       Day19
                       Day20
                       Day21
                       Day22
                       Day23
                       Day24
                       Day25
  other-modules:       Common.Runner
                       Common.Parser
                       Common.Util
                       Common.Grid
                       Common.Search
                       Common.Box
                       Common.Permutation
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  LambdaCase, ImportQualifiedPost
